--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <img src="./images.jpg">
         <input type="text" id="input-field" placeholder="Food">
         <button id="add-button">Add to cart</button>
+        <ul id="shopping-list">
+        </ul>
     </div>
 
     <script src="./script.js" type="module"></script>
