--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile app</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <div class="container">
-        <img src="./images.jpg">
+        <img src="./Images/images.jpg">
         <input type="text" id="input-field" placeholder="Food">
         <button id="add-button">Add to cart</button>
         <ul id="shopping-list">
